Add handler to get group schedule by UUID
